--- a/components/Home/Reviews/index.module.scss
+++ b/components/Home/Reviews/index.module.scss
@@ -19,8 +19,6 @@ section.reviews {
       padding-right: 16px;
       background-color: var(--main-beige-color);
       border-radius: 12px;
-
-      padding: 8px;
     }
     .text_container {
       width: 33%;
